// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`favoritesReducer handles add_to_favorite action 1`] = `
Object {
  "favorites": Object {
    "posts": Array [],
  },
  "posts": Array [
    Object {
      "id": "98vj9e",
      "thumbnail": "https://b.thumbs.redditmedia.com/NFJ5zzCUnxTgAl71EkjSSCePc7wtcCLqTdbYgrwJkdU.jpg",
      "title": "Blinks of affection",
      "url": "https://v.redd.it/1zhxx58rhp421",
    },
    Object {
      "id": "a6q94b",
      "thumbnail": "https://b.thumbs.redditmedia.com/cjYmtjKiy9OT1y43RFMuTkcH_WmTM66RsSuN7c6xkhA.jpg",
      "title": "This church looks like a gingerbread house.",
      "url": "https://i.imgur.com/GsoJi0d.gifv",
    },
  ],
}
`;

exports[`favoritesReducer handles remove_from_favorite action 1`] = `
Object {
  "favorites": Object {
    "posts": Array [],
  },
  "posts": Array [
    Object {
      "id": "98vj9e",
      "thumbnail": "https://b.thumbs.redditmedia.com/NFJ5zzCUnxTgAl71EkjSSCePc7wtcCLqTdbYgrwJkdU.jpg",
      "title": "Blinks of affection",
      "url": "https://v.redd.it/1zhxx58rhp421",
    },
  ],
}
`;

exports[`favoritesReducer returns the same state for favorites reducer on an unhandled action 1`] = `
Object {
  "favorites": Object {
    "posts": Array [],
  },
}
`;
